Update readme for another branch

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 hello, this is my git testing, first demo of practicing
 Nothing in here left, just me, only myself, lonely and sad 
+not hello world
